<resources>
    <string name="app_name">魔方相册</string>

    <string name="state_loading">正在加载…</string>
    <string name="state_no_more">没有更多数据</string>
    <string name="state_load_error">加载失败</string>

    <string name="action_settings">设置</string>
    <string name="action_vip_help">帮助</string>
    <string name="action_vip_more">更多</string>
    <string name="title_settings">设置</string>
    <string name="title_menu_vip">会员菜单</string>
    <string name="title_about">关于</string>
    <string name="action_rank">排序</string>
    <string name="action_optimize">优化</string>
    <string name="action_compressor">压缩</string>
    <string name="action_backup">备份</string>

    <string name="menu_photo">照片</string>
    <string name="menu_album">相册</string>
    <string name="menu_class">智能分类</string>
    <string name="menu_today">去年今日</string>
    <string name="menu_story">故事相册</string>
    <string name="menu_settings">设置</string>



    <string name="title">英勇投弹手 库奇</string>
    <string name="introdution">库奇拥有极为出色的线上消耗和追杀能力，爆发能力和技能消耗不俗，独特的混伤机制加上自带削减对方双抗的技能，让他在面对任何敌人都游刃有余，缺点逆风较为无力，技能多数为魔法伤害，较为耗蓝，大招装载时间较长在长期消耗后的团战中不占优势。\n(是作者的本命英雄(ﾟ▽ﾟ)/)</string>
    <string name="story">大发明家黑默丁格和他约德尔大陆的同伴移居到皮尔特沃夫后，就将科学当作日常生活的一部分。他们很快就为科技魔法社区做出了突破性的贡献。约德尔人虽然个子矮小，但勤奋弥补了先天不足。库奇凭借成功的试飞获得了英勇投弹手的头衔。\n\n他试飞的是专为前线侦查行动部门(ROFLC)而设计的新型空袭飞机。这个机型也成为了班德尔城远征军(BCEF)的支柱。库奇和他的飞行战队"尖啸之蛇"常常翱翔于瓦罗然的天空观察地形，也为观众表演空中特技。\n\n库奇是"尖啸之蛇"里最具盛名的，不单因为他无与伦比的勇气，还有他面对威胁时冷静的头脑。在加入联盟之前，库奇也效力过其他组织，他经常主动接受任务，深入敌后，在危险地带收集情报或传递信息，他在危险中成长。早晨来一场激烈的空战便是他的最高享受。\n\n库奇不仅是个王牌飞行员，他还改装了他的飞机，为其装上大量的武器。有人认为这只是为了炫耀，而不是为了战斗。联盟的协议生效后，公开的敌对消停。因此库奇被迫退役，他觉得自己好像"引擎被熄灭，双翼被截掉"。虽然他仍然表演特技飞行、穿越峡谷，但他再也闻不到那令他精神振作的火药味了。黑默丁格加入英雄联盟后，库奇也紧随其后，这不足为奇，因为他渴望与世界顶级对手战斗，展现他的勇气。\n\n他就是库奇——来自空中的死神！</string>


    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">基于Android平台的图像储存空间优化软件的设计与实现(魔方相册)</string>
    <string name="nav_header_subtitle">计科1501 张栋 150102060136</string>
    <string name="nav_header_desc">test</string>
</resources>
