<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.mepstudio.LeShare.MainActivity">
    <item
        android:id="@+id/action_rank"
        android:orderInCategory="100"
        android:title="@string/action_rank"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_optimize"
        android:orderInCategory="100"
        android:title="@string/action_optimize"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_compressor"
        android:orderInCategory="100"
        android:title="@string/action_compressor"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:title="@string/action_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
